--- a/CT_week4.ipynb
+++ b/CT_week4.ipynb
@@ -1228,13 +1228,14 @@
    ],
    "source": [
     "i=int(input())\n",
-    "a=str(i)\n",
+    "a=str(i)[::-1]\n",
+    "t=''\n",
     "count=0\n",
-    "for k in range(len(a)):\n",
-    "    count+=1\n",
-    "    print(a[k],end='')\n",
-    "    if count%3==0 and k!=len(a)-1:\n",
-    "        print('.',end='')"
+    "for k in a:\n",
+    "    t=k+t\n",
+    "    if count%3==0 :\n",
+    "        t=','+t\n",
+    "print(t)\n"
    ]
   },
   {
