--- a/CT_week4.ipynb
+++ b/CT_week4.ipynb
@@ -1231,9 +1231,9 @@
     "a=str(i)[::-1]\n",
     "t=''\n",
     "count=0\n",
-    "for k in a:\n",
-    "    t=k+t\n",
-    "    if count%3==0 :\n",
+    "for k in range(len(a)):\n",
+    "    t=a[k]+t\n",
+    "    if count%3==0 and k!=len(a)-1:\n",
     "        t=','+t\n",
     "print(t)\n"
    ]
