--- a/CT_week4.ipynb
+++ b/CT_week4.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "e0d097f6",
    "metadata": {},
    "outputs": [
@@ -264,28 +264,14 @@
     "Nhập hai số nguyên dương a, b (a ≤ b). Hãy tính tổng các số\n",
     "nguyên tố trong đoạn [a, b]. Mỗi dòng là một bộ test (a b).\"\n",
     "'''\n",
-    "sum=0\n",
-    "def isprime(n):\n",
-    "    la_so_nt=True\n",
-    "    if n<2:\n",
-    "       return False\n",
-    "    if n==2:\n",
-    "       return True\n",
-    "    for k in range(2,int(n**0.5)+1):\n",
-    "     if n%k == 0:\n",
-    "        la_so_nt=False\n",
-    "        break\n",
-    "    return la_so_nt\n",
-    "while True:\n",
-    "    a,b=map(int,input().split(' '))\n",
-    "    if (a<=b)==False:\n",
-    "       print('ko thoa man')\n",
-    "       continue\n",
-    "    break\n",
-    "for i in range(a,b+1):\n",
-    "   if isprime(i):\n",
-    "      sum+=i\n",
-    "print(sum)\n",
+    "a,b=map(int,input().split())\n",
+    "la_snt=[True]*(b+1)\n",
+    "la_snt[0]=la_snt[1]=False\n",
+    "for k in range(2,int((b+1)**0.5)+1):\n",
+    "    for i in range(k*k,b+1,k):\n",
+    "        la_snt[i]=False\n",
+    "print(sum(i for i in range(a,b+1) if la_snt[i]==True))\n",
+    "\n",
     "   "
    ]
   },
@@ -312,28 +298,15 @@
     }
    ],
    "source": [
-    "# [LargestPrimeFactor]\n",
-    "\n",
-    "def isprime(n):\n",
-    "    if n < 2:\n",
-    "        return False\n",
-    "    for k in range(2, int(n**0.5) + 1):\n",
-    "        if n % k == 0:\n",
-    "            return False\n",
-    "    return True\n",
-    "\n",
-    "n = int(input(\"Nhập n (n ≥ 2): \"))\n",
-    "\n",
+    "n = int(input(\"Nhập n\"))\n",
     "largest = None\n",
     "x = n\n",
-    "\n",
-    "# Chia dần n cho các ước nhỏ\n",
+    "# chia dan n cho cac uoc nho\n",
     "for k in range(2, int(n**0.5) + 1):\n",
     "    while x % k == 0:\n",
     "        largest = k\n",
     "        x /= k #x khi nay la mot uoc cua n voi : x*k=n\n",
     "\n",
-    "# Nếu còn phần dư lớn hơn 1, chính nó là ước nguyên tố lớn nhất\n",
     "if x > 1: # neu x khac k, neu so can tim lon hon can bac  hai cua n, nguoc lai so do ho hon cai bac hai cua n\n",
     "    largest = x\n",
     "\n",
@@ -350,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "9f891be9",
    "metadata": {},
    "outputs": [
@@ -378,9 +351,10 @@
     "def palindrome(n):\n",
     "    chu=str(n)\n",
     "    return chu[::]==chu[::-1]\n",
+    "reversed_n=reverse(n)\n",
     "while True:\n",
     "    count+=1\n",
-    "    n = n + reverse(n)\n",
+    "    n = n + reversed_n\n",
     "    if palindrome(n):\n",
     "        print(count,' ',n)\n",
     "        break\n"
@@ -453,30 +427,25 @@
     "dãy Collatz lớn nhất và in ra x cùng độ dài dãy tương ứng (x\n",
     "L). Nếu có nhiều số cùng độ dài, chọn số nhỏ nhất.\"\n",
     "'''\n",
-    "max=0\n",
+    "maxx=0\n",
     "num=0\n",
-    "while True:\n",
-    "    n=int(input('nhap so n'))\n",
-    "    if n<=0:\n",
-    "        continue\n",
-    "    break\n",
     "def collatz(n):\n",
     "    count=1\n",
     "    while n!=1 :\n",
     "        if n%2==0:\n",
-    "            n=n/2\n",
+    "            n=n//2\n",
     "        else:\n",
     "            n=3*n+1\n",
     "        count+=1\n",
     "    return count\n",
     "for number in range(1,n+1):\n",
-    "    if collatz(number)>max:\n",
-    "        max=collatz(number)\n",
+    "    if collatz(number)>maxx:\n",
+    "        maxx=collatz(number)\n",
     "        num=number\n",
-    "    elif collatz(number)==max and number<num:\n",
-    "        max=collatz(number)\n",
+    "    elif collatz(number)==maxx and number<num:\n",
+    "        maxx=collatz(number)\n",
     "        num=number\n",
-    "print(num,' ',max)"
+    "print(num,' ',maxx)"
    ]
   },
   {
@@ -590,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "396f7832",
    "metadata": {},
    "outputs": [
@@ -605,13 +574,9 @@
    "source": [
     "m,n=map(int,input().split())\n",
     "if m>n:\n",
-    "    a=m\n",
-    "    b=n\n",
-    "else:\n",
-    "    a=n\n",
-    "    b=m\n",
+    "   m=n\n",
     "max=1\n",
-    "for k in range(2,b+1):\n",
+    "for k in range(2,m+1):\n",
     "        if (b%k==0 and a%k==0) and k>max:\n",
     "             max=k\n",
     "print(max)"
@@ -639,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "80aa575a",
    "metadata": {},
    "outputs": [
@@ -652,10 +617,7 @@
     }
    ],
    "source": [
-    "import sys\n",
     "con,chan=map(int,input().split())\n",
-    "if chan%2!=0:\n",
-    "    sys.exit('Invalid')\n",
     "cho=(chan-con*2)//2\n",
     "ga=con-cho\n",
     "if cho<0 :\n",
@@ -724,7 +686,7 @@
    "source": [
     "a=int(input())\n",
     "for k in range(1,11):\n",
-    "    print(a*k)"
+    "    print(f'{a}x{k}={a*k}')"
    ]
   },
   {
@@ -737,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "540b355b",
    "metadata": {},
    "outputs": [
@@ -753,12 +715,8 @@
    "source": [
     "m,n=map(int,input().split())\n",
     "if m>n:\n",
-    "    a=m\n",
-    "    b=n\n",
-    "else:\n",
-    "    a=n\n",
-    "    b=m\n",
-    "for k in range(1,n):\n",
+    "   m=n\n",
+    "for k in range(1,m):\n",
     "    if m%k==0 and n%k==0:\n",
     "        print(k)\n"
    ]
@@ -997,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "ea461241",
    "metadata": {},
    "outputs": [
@@ -1014,12 +972,11 @@
     "if A<1:\n",
     "    print(\"ko dc\")\n",
     "else:\n",
-    "    f1 , f2=1,1\n",
-    "    ans=1\n",
+    "    f1 =0\n",
+    "    f2=1\n",
     "    while  f2<=A:\n",
-    "        ans=f2\n",
     "        f1,f2=f2,f1+f2\n",
-    "    print(ans)\n",
+    "    print(f1)\n",
     "\n"
    ]
   },
@@ -1202,6 +1159,33 @@
     "    print('mat khau manh')\n",
     "else:\n",
     "    print('mat khau yeu')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "007b1f69",
+   "metadata": {},
+   "source": [
+    "**bai 33"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecd69e0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i=int(input())\n",
+    "a=str(i)[::-1]\n",
+    "count=0\n",
+    "t=''\n",
+    "for k in range(len(a)):\n",
+    "   count+=1\n",
+    "   t=a[k]+t\n",
+    "   if count%3==0 and k!=len(a)-1:\n",
+    "      t=','+t\n",
+    "print(t)"
    ]
   },
   {
