--- a/CT_week4.ipynb
+++ b/CT_week4.ipynb
@@ -574,10 +574,12 @@
    "source": [
     "m,n=map(int,input().split())\n",
     "if m>n:\n",
+    "   c=m\n",
     "   m=n\n",
+    "   n=c\n",
     "max=1\n",
     "for k in range(2,m+1):\n",
-    "        if (b%k==0 and a%k==0) and k>max:\n",
+    "        if (n%k==0 and m%k==0) and k>max:\n",
     "             max=k\n",
     "print(max)"
    ]
@@ -715,7 +717,9 @@
    "source": [
     "m,n=map(int,input().split())\n",
     "if m>n:\n",
+    "   c=m\n",
     "   m=n\n",
+    "   n=c\n",
     "for k in range(1,m):\n",
     "    if m%k==0 and n%k==0:\n",
     "        print(k)\n"
