--- a/CT_week1.ipynb
+++ b/CT_week1.ipynb
@@ -632,6 +632,25 @@
     "for k in range(10):\n",
     "    print(\"Hello, World\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a9bcbc62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Louis, I think this is the beginning of a beautiful friendship.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#testing git\n",
+    "print(\"Louis, I think this is the beginning of a beautiful friendship.\")"
+   ]
   }
  ],
  "metadata": {
