--- a/CT_week6.ipynb
+++ b/CT_week6.ipynb
@@ -174,7 +174,6 @@
     "      li.append((di[l],l))\n",
     "   if k-l not in di:\n",
     "      di[k-l]=l\n",
-    "print(di)\n",
     "print(sorted(list(set(li))))"
    ]
   },
@@ -282,19 +281,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "090b3c7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   1   2  34   5\n",
+      "  12  44 556"
+     ]
+    }
+   ],
    "source": [
     "#W6A16\n",
-    "a=input().split()\n",
-    "b=input().split()\n",
+    "a=list(map(int,input().split()))\n",
+    "b=list(map(int,input().split()))\n",
     "for k in a:\n",
-    "    print(k+' '*(4-len(str(k))),end='')\n",
+    "    print(f'{str(k):>4}',end='')\n",
     "print()\n",
     "for k in b:\n",
-    "    print(k+' '*(4-len(str(k))),end='')\n"
+    "    print(f'{k:4d}',end='')\n"
    ]
   },
   {
