--- a/CT_week9.ipynb
+++ b/CT_week9.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "da323423",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,6 @@
     "n = int(input())\n",
     "a = list(map(int, input().split()))\n",
     "\n",
-    "# Bước 1\n",
     "i = n - 2\n",
     "while i >= 0 and a[i] >= a[i + 1]:\n",
     "    i -= 1\n",
@@ -299,38 +298,14 @@
     "if i < 0:\n",
     "    print(*sorted(a))\n",
     "else:\n",
-    "    # Bước 2\n",
     "    j = n - 1\n",
     "    while a[j] <= a[i]:\n",
     "        j -= 1\n",
     "\n",
-    "    # Bước 3\n",
     "    a[i], a[j] = a[j], a[i]\n",
     "    a[i + 1:] = reversed(a[i + 1:])\n",
     "\n",
     "    print(*a)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "475d8758",
-   "metadata": {},
-   "source": [
-    "1 0 0 0 1\n",
-    "1\n",
-    "1 0 0 0 1\n",
-    "2\n",
-    "0 0 0 0 0\n",
-    "3\n",
-    "1 0 1 0 1\n",
-    "1\n",
-    "0\n",
-    "1\n",
-    "True\n",
-    "False\n",
-    "True\n",
-    "False\n",
-    "True"
    ]
   },
   {
@@ -368,23 +343,6 @@
     "            count+=1\n",
     "            break\n",
     "print(count==k)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "44bf80f1",
-   "metadata": {},
-   "source": [
-    "\n",
-    " RU\n",
-    "UD\n",
-    "RDRU\n",
-    "RUULL\n",
-    "RURDL               False\n",
-    "                True\n",
-    "                True\n",
-    "                False\n",
-    "                True"
    ]
   },
   {
@@ -523,14 +481,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "619fc7dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "#W9A10\n",
     "def findRadius(houses, heaters):\n",
-    "    pass\n",
+    "    mm=[]\n",
+    "    heaters.sort()\n",
+    "    for house in houses:\n",
+    "        dis=10**9 +1\n",
+    "        for heater in heaters:\n",
+    "          dis=min(abs(house-heater),dis)\n",
+    "        mm.append(dis)\n",
+    "    return max(mm)\n",
+    "houses=list(map(int,input().split()))\n",
+    "heaters=list(map(int,input().split()))\n",
+    "print(findRadius(houses,heaters))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32eb3ab1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "104108\n"
+     ]
+    }
+   ],
+   "source": [
+    "#W9A10 cach 2\n",
+    "import bisect\n",
+    "\n",
+    "def findRadius(houses, heaters):\n",
+    "    heaters.sort()\n",
+    "    res = 0\n",
+    "\n",
+    "    for house in houses:\n",
+    "        i = bisect.bisect_left(heaters, house)\n",
+    "\n",
+    "        left = house - heaters[i-1] if i > 0 else float('inf')\n",
+    "        right = heaters[i] - house if i < len(heaters) else float('inf')\n",
+    "\n",
+    "        res = max(res, min(left, right))\n",
+    "\n",
+    "    return res\n",
     "houses=list(map(int,input().split()))\n",
     "heaters=list(map(int,input().split()))\n",
     "print(findRadius(houses,heaters))"
